# fastapi

./: .data.db  .test.db  README.md  db.py  flake.nix  main.py  pyproject.toml  railway.json  requirements.txt
app/: __main__.py  db.py
models/: command.py  item.py
