[tool.poetry]
name = "railway-fastapi-template"
version = "0.1.0"
description = "This example starts up a FastAPI server"
authors = ["DeviousLab <deviouslab@gmail.com>"]
license = "MIT"
packages = [
  { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.1"
uvicorn = "^0.18.3"
sqlmodel = "^0.0.14"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mythicPlusBot = "uvicorn app.__main__:app --host 0.0.0.0 --port $PORT"
